v0.10/_sources/tutorials/index.rst.txt
:orphan:

.. _tutorials-index:

Tutorials
=========

This collection of tutorials (under development) demonstrates the use of MetPy to perform
common meteorological tasks.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Early in our scientific careers we all learn about the importance of paying attention to units ...">

.. only:: html

    .. figure:: /tutorials/images/thumb/sphx_glr_unit_tutorial_thumb.png

        :ref:`sphx_glr_tutorials_unit_tutorial.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/unit_tutorial

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Upper air analysis is a staple of many synoptic and mesoscale analysis problems. In this tutori...">

.. only:: html

    .. figure:: /tutorials/images/thumb/sphx_glr_upperair_soundings_thumb.png

        :ref:`sphx_glr_tutorials_upperair_soundings.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/upperair_soundings

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="`xarray &lt;http://xarray.pydata.org/&gt;`_ is a powerful Python package that provides N-dimensional ...">

.. only:: html

    .. figure:: /tutorials/images/thumb/sphx_glr_xarray_tutorial_thumb.png

        :ref:`sphx_glr_tutorials_xarray_tutorial.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/xarray_tutorial
.. raw:: html

    <div style='clear:both'></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download

    :download:`Download all examples in Python source code: tutorials_python.zip <//home/travis/build/Unidata/MetPy/docs/tutorials/tutorials_python.zip>`



  .. container:: sphx-glr-download

    :download:`Download all examples in Jupyter notebooks: tutorials_jupyter.zip <//home/travis/build/Unidata/MetPy/docs/tutorials/tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
