v1.4/_sources/tutorials/index.rst.txt
:orphan:

.. _tutorials-index:

Tutorials
=========

This collection of tutorials (under development) demonstrates the use of MetPy to perform
common meteorological tasks.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Early in our scientific careers we all learn about the importance of paying attention to units ...">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_unit_tutorial_thumb.png
    :alt: Working With Units

  :ref:`sphx_glr_tutorials_unit_tutorial.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Working With Units</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Upper air analysis is a staple of many synoptic and mesoscale analysis problems. In this tutori...">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_upperair_soundings_thumb.png
    :alt: Upper Air Sounding Tutorial

  :ref:`sphx_glr_tutorials_upperair_soundings.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Upper Air Sounding Tutorial</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="`xarray &lt;https://docs.xarray.dev/en/stable/&gt;`_ is a powerful Python package that provides N-dim...">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_xarray_tutorial_thumb.png
    :alt: xarray with MetPy Tutorial

  :ref:`sphx_glr_tutorials_xarray_tutorial.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">xarray with MetPy Tutorial</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The declarative syntax that is a part of the MetPy packaged is designed to aid in simple data e...">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_declarative_tutorial_thumb.png
    :alt: MetPy Declarative Syntax Tutorial

  :ref:`sphx_glr_tutorials_declarative_tutorial.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MetPy Declarative Syntax Tutorial</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/unit_tutorial
   /tutorials/upperair_soundings
   /tutorials/xarray_tutorial
   /tutorials/declarative_tutorial


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: tutorials_python.zip </tutorials/tutorials_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: tutorials_jupyter.zip </tutorials/tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
